--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Ensure this matches the Gradle plugin version compatible with your Flutter and Android setup
+        classpath 'com.android.tools.build:gradle:8.0.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,14 +16,18 @@ allprojects {
     }
 }
 
+// Specify a shared build directory for all subprojects
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
+// Ensure the evaluation of ':app' happens first
 subprojects {
     project.evaluationDependsOn(":app")
 }
 
+// Register a clean task for the entire project
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
