--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,25 +9,27 @@ version: 1.0.0+1
 
 # Flutter SDK environment
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=2.17.0" # Minimum SDK version to support latest dependencies
 
 # Dependencies required for the application
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  shared_preferences: ^2.1.1
+  shared_preferences: ^2.2.0
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.7
-  flutter_localizations: 
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.5
+  async: 2.11.0 # Match the version required by flutter_test
+  intl: ^0.19.0 # Align with flutter_localizations constraint
 
 # Dev dependencies for testing and linting
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # Flutter-specific configuration
 flutter:
