--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   cupertino_icons: ^1.0.5
   async: 2.11.0 # Match the version required by flutter_test
   intl: ^0.19.0 # Align with flutter_localizations constraint
+  google_generative_ai: any
+  flutter_markdown: ^0.7.4+2
+  firebase_core: ^3.8.1
 
 # Dev dependencies for testing and linting
 dev_dependencies:
