--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #camera: ^0.9.6+19
   provider: ^6.0.5
   shared_preferences: ^2.2.0
   cached_network_image: ^3.2.3
@@ -24,9 +25,11 @@ dependencies:
   cupertino_icons: ^1.0.5
   async: 2.11.0 # Match the version required by flutter_test
   intl: ^0.19.0 # Align with flutter_localizations constraint
-  google_generative_ai: any
+  google_generative_ai: ^0.4.6
   flutter_markdown: ^0.7.4+2
   firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
 
 # Dev dependencies for testing and linting
 dev_dependencies:
@@ -39,7 +42,8 @@ flutter:
   uses-material-design: true
 
   # Add assets here when needed
-  # assets:
+  assets:
+    - assets/images/
     # Example assets (remove or replace these placeholders as needed)
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
