--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
+  connectivity_plus: ^6.0.2
 
 # Dev dependencies for testing and linting
 dev_dependencies:
