--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^4.16.0
   connectivity_plus: ^6.0.2
   permission_handler: ^11.1.0
+  flutter_switch: ^0.3.2
 
 # Dev dependencies for testing and linting
 dev_dependencies:
