--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   connectivity_plus: ^6.0.2
   permission_handler: ^11.1.0
   flutter_switch: ^0.3.2
+  activity_ring: ^0.3.0
 
 # Dev dependencies for testing and linting
 dev_dependencies:
