--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_switch: ^0.3.2
   image_picker: ^1.0.7
   activity_ring: ^0.3.0
+  responsive_grid_list: ^1.4.0
 
 # Dev dependencies for testing and linting
 dev_dependencies:
@@ -50,14 +51,6 @@ flutter:
   # Add assets here when needed
   assets:
     - assets/images/
-    # Remove the specific PNG files since we're using SVGs from the images folder
-    # - assets/images/arrow_left_primary.png
-    # - assets/images/arrow_right_bluegray_400.png
-    # - assets/images/arrow_right.png
-    # - assets/images/television.png
-    # Example assets (remove or replace these placeholders as needed)
-    # - images/a_dot_burr.jpeg
-    # - images/a_dot_ham.jpeg
     - assets/images/weekly_goal.svg
     - assets/images/goal_weight.svg
     - assets/images/calories_goal.svg
@@ -67,6 +60,14 @@ flutter:
     - assets/images/protein_goal.svg
     - assets/images/fat.png
     - assets/images/accessibility.png
+    - assets/images/imgVector80x84.png
+    - assets/images/imgArrowLeftPrimary.svg
+    - assets/images/award1.svg
+    - assets/images/award2.svg
+    - assets/images/award3.svg
+    - assets/images/award4.svg
+    - assets/images/award5.svg
+    - assets/images/award6.svg
 
   # Custom fonts configuration (add fonts if needed)
   # fonts:
