--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.10.5+9
+  camera: ^0.11.0+2
   provider: ^6.0.5
   shared_preferences: ^2.2.0
   cached_network_image: ^3.2.3
@@ -25,12 +25,13 @@ dependencies:
   cupertino_icons: ^1.0.5
   async: 2.11.0
   intl: ^0.19.0
+  flutter_ai_toolkit: ^0.6.7
   google_generative_ai: ^0.4.6
   flutter_markdown: ^0.7.4+2
-  firebase_core: ^2.25.3
+  firebase_core: ^3.9.0
   google_sign_in: ^6.2.1
-  cloud_firestore: ^4.15.3
-  firebase_auth: ^4.17.3
+  cloud_firestore: ^5.6.0
+  firebase_auth: ^5.3.4
   connectivity_plus: ^6.0.2
   permission_handler: ^11.1.0
   flutter_switch: ^0.3.2
