--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,7 +32,8 @@ target 'Runner' do
   use_modular_headers!
 
   # Explicit Firebase dependency to resolve version conflicts
-  pod 'Firebase/Firestore', '~> 10.25.0' # Align with the cloud_firestore plugin dependency.
+  pod 'Firebase/Firestore', '~> 11.4.0' # Align with the cloud_firestore plugin dependency.
+  pod 'Firebase/Auth', '~> 11.4.0'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
