fixed the outlines & buttons in history tab,  fixed the position of the icons in profile screen,  added change profile pic, name, username functionality across screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
   # Add assets here when needed
   assets:
     - assets/images/
+    - assets/images/fat_goal.svg
+    - assets/images/activity_level2.svg
 
   # Custom fonts configuration (add fonts if needed)
   # fonts:
