--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,10 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# iOS build related
+/Payload/
+*.ipa
+/components/
+
 # windsurf rules
 .windsurfrules
