--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     
     // Only use core-ktx
     implementation 'com.google.android.play:core-ktx:1.8.1'
+    
+    // Image Cropper
+    implementation 'com.github.yalantis:ucrop:2.2.8'
 }
