--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_cropper: ^5.0.1
   path_provider: ^2.1.2
   path: ^1.8.3
+  confetti: ^0.7.0
 
   # State Management
   provider: ^6.1.1
