--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.8.3
   confetti: ^0.7.0
+  image: ^4.1.3
 
   # State Management
   provider: ^6.1.1
