--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   # UI Components
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.9
+  flutter_screenutil: ^5.9.0
   cached_network_image: ^3.3.1
   flutter_switch: ^0.3.2
   activity_ring: ^0.3.0
