--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Utilities
   intl: ^0.19.0
   async: ^2.11.0
+  sensors_plus: ^6.1.1
 
 # Dev dependencies for testing and linting
 dev_dependencies:
