--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   async: ^2.11.0
   sensors_plus: ^6.1.1
 
+  # RxDart
+  rxdart: ^0.27.7
+
 # Dev dependencies for testing and linting
 dev_dependencies:
   flutter_test:
