--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ app.*.map.json
 .windsurfrules
 
 node_modules/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
