--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # State Management
   provider: ^6.1.1
 
+  # Environment Variables
+  flutter_dotenv: ^5.1.0
+
   # Firebase
   firebase_core: ^3.9.0
   firebase_auth: ^5.3.4
@@ -82,5 +85,6 @@ flutter:
     - assets/images/person.crop.circle.fill.svg
     - assets/images/vector.svg
     - assets/images/vector.png
+    - .env
     
     
